--- a/pages/style.css
+++ b/pages/style.css
@@ -1,21 +1,9 @@
-* {
-  box-sizing: border-box;
-}
-
-.column {
-  float: left;
-  padding: 10px;
-  height: 500px;
-  width: 500px;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
+html, body {
+  height: 100%;
+  width: 100%;
 }
 
 .model {
-  height: 500px;
-  width: 500px;
- }
+  height: 100%;
+  width: 100%;
+}
