--- a/pages/style.css
+++ b/pages/style.css
@@ -1,13 +1,11 @@
 html, body {
-  height: 100%;
- 	width: auto;
- 	margin-left: 0px;
-	margin-right: 0px;
+	height: auto;
+	width: auto;
+	margin: 0px;
 }
 
 .model {
-  height: 100%;
- 	width: auto;
- 	margin-left: 0px;
-	margin-right: 0px;
+	height: auto;
+	width: auto;
+	margin: 0px;
 }
