--- a/pages/style.css
+++ b/pages/style.css
@@ -1,11 +1,11 @@
 html, body {
-	height: auto;
-	width: auto;
+	height: 100%;
+	width: 100%;
 	margin: 0px;
 }
 
 .model {
-	height: auto;
-	width: auto;
+	height: 100%;
+	width: 100%;
 	margin: 0px;
 }
