--- a/pages/style.css
+++ b/pages/style.css
@@ -14,6 +14,6 @@ model-viewer#reveal {
 	--poster-color: transparent;
 }
 
-model-viewer#ar-button {
-	top: 16px;
+#default-ar-button {
+	width: 100px;
 }
